Change package name

--- a/test/channel_geometries.ipynb
+++ b/test/channel_geometries.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import superlink.geometry\n",
+    "import pipedream_solver.geometry\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.special\n",
     "import seaborn as sns\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,31 +36,32 @@
        " 'rect_closed': 2,\n",
        " 'rect_open': 3,\n",
        " 'trapezoidal': 5,\n",
-       " 'triangular': 4}"
+       " 'triangular': 4,\n",
+       " 'wide': 8}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "superlink.geometry.geom_code"
+    "pipedream_solver.geometry.geom_code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "circular = superlink.geometry.Circular\n",
-    "rect_closed = superlink.geometry.Rect_Closed\n",
-    "rect_open = superlink.geometry.Rect_Open\n",
-    "triangular = superlink.geometry.Triangular\n",
-    "trapezoidal = superlink.geometry.Trapezoidal\n",
-    "parabolic = superlink.geometry.Parabolic\n",
-    "elliptical = superlink.geometry.Elliptical"
+    "circular = pipedream_solver.geometry.Circular\n",
+    "rect_closed = pipedream_solver.geometry.Rect_Closed\n",
+    "rect_open = pipedream_solver.geometry.Rect_Open\n",
+    "triangular = pipedream_solver.geometry.Triangular\n",
+    "trapezoidal = pipedream_solver.geometry.Trapezoidal\n",
+    "parabolic = pipedream_solver.geometry.Parabolic\n",
+    "elliptical = pipedream_solver.geometry.Elliptical"
    ]
   },
   {
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +103,7 @@
     "ax[0,0].fill_between(h, circular.A_ik(h, h, g1), alpha=0.5)\n",
     "ax[0,1].fill_between(h, circular.Pe_ik(h, h, g1), alpha=0.5)\n",
     "ax[0,2].fill_between(h, circular.B_ik(h, h, g1), alpha=0.5)\n",
-    "ax[0,3].fill_between(h, circular.R_ik(circular.A_ik_alt(h, h, g1),\n",
+    "ax[0,3].fill_between(h, circular.R_ik(circular.A_ik(h, h, g1),\n",
     "                              circular.Pe_ik(h, h, g1)), alpha=0.5)\n",
     "\n",
     "g1 = np.ones_like(h)\n",
