--- a/test/coupled_overland_flow.ipynb
+++ b/test/coupled_overland_flow.ipynb
@@ -11,9 +11,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy import integrate\n",
-    "from superlink.hydrology import GreenAmpt\n",
-    "from superlink.hydraulics import SuperLink\n",
-    "from superlink.simulation import Simulation, interpolate_sample\n",
+    "from pipedream_solver.hydrology import GreenAmpt\n",
+    "from pipedream_solver.hydraulics import SuperLink\n",
+    "from pipedream_solver.simulation import Simulation, interpolate_sample\n",
     "import scipy.optimize\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,12 +177,13 @@
     "soil_params['psi_f'] = psi_f\n",
     "soil_params['Ks'] = Ks / 3600\n",
     "soil_params['theta_s'] = theta_s\n",
-    "soil_params['theta_i'] = theta_i"
+    "soil_params['theta_i'] = theta_i\n",
+    "soil_params['A_s'] = surfarea"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[==================================================] 100.0% [5.36 s]"
+      "[==================================================] 100.0% [4.85 s]"
      ]
     }
    ],
@@ -241,16 +242,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1258612e8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1064e4358>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -266,22 +267,22 @@
     }
    ],
    "source": [
-    "simulation.states._h_Ik.plot(legend=False)"
+    "simulation.states.h_Ik.plot(legend=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_h_Ik = simulation.states._h_Ik.loc[:, simulation.model._kI >= 7]\n",
-    "_Q_ik = simulation.states._Q_ik.loc[:, simulation.model._ki >= 7]"
+    "_h_Ik = simulation.states.h_Ik.loc[:, simulation.model._kI >= 7]\n",
+    "_Q_ik = simulation.states.Q_ik.loc[:, simulation.model._ki >= 7]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +354,7 @@
     }
    ],
    "source": [
-    "simulation.states._Q_dk.plot(legend=False)\n",
+    "simulation.states.Q_dk.plot(legend=False)\n",
     "plt.title('Discharge into downstream channel')\n",
     "plt.ylabel('Discharge (cms)')\n",
     "_ = plt.xlabel('Time (s)')"
@@ -361,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +371,7 @@
        "Text(0.5, 1.0, 'Infiltration rates')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
