--- a/test/kalman_filter_test.ipynb
+++ b/test/kalman_filter_test.ipynb
@@ -16,9 +16,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scipy.linalg\n",
-    "from superlink.hydraulics import SuperLink\n",
-    "from superlink.simulation import Simulation\n",
-    "from superlink.nutils import interpolate_sample, _kalman_semi_implicit"
+    "from pipedream_solver.hydraulics import SuperLink\n",
+    "from pipedream_solver.simulation import Simulation\n",
+    "from pipedream_solver.nutils import interpolate_sample, _kalman_semi_implicit"
    ]
   },
   {
@@ -89,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[=================================================-] 98.1% [1.22 s]"
+      "[=================================================-] 98.1% [1.45 s]"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -141,8 +141,8 @@
     "fig, ax = plt.subplots(1, figsize=(10, 4))\n",
     "\n",
     "# Compute average discharge in superlinks\n",
-    "clean_simulation.states.Q_k = (clean_simulation.states._Q_uk\n",
-    "                               + clean_simulation.states._Q_dk) / 2\n",
+    "clean_simulation.states.Q_k = (clean_simulation.states.Q_uk\n",
+    "                               + clean_simulation.states.Q_dk) / 2\n",
     "\n",
     "# Plot results\n",
     "clean_simulation.states.Q_k.plot(ax=ax, title='Superlink discharge (cms)')\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[=================================================-] 98.1% [0.56 s]"
+      "[=================================================-] 98.1% [0.88 s]"
      ]
     }
    ],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
     "fig, ax = plt.subplots(1, figsize=(10, 4))\n",
     "\n",
     "# Compute average discharge in superlinks\n",
-    "noisy_simulation.states.Q_k = (noisy_simulation.states._Q_uk + noisy_simulation.states._Q_dk) / 2\n",
+    "noisy_simulation.states.Q_k = (noisy_simulation.states.Q_uk + noisy_simulation.states.Q_dk) / 2\n",
     "\n",
     "# Plot results\n",
     "noisy_simulation.states.Q_k.plot(ax=ax, title='Superlink discharge (cms)')\n",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,14 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[=================================================-] 98.1% [2.57 s]"
+      "[=================================================-] 98.1% [2.61 s]"
      ]
     }
    ],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -349,8 +349,8 @@
     "fig, ax = plt.subplots(3, figsize=(10, 12))\n",
     "\n",
     "# Compute average discharge in superlinks\n",
-    "filtered_simulation.states.Q_k = (filtered_simulation.states._Q_uk\n",
-    "                                  + filtered_simulation.states._Q_dk) / 2\n",
+    "filtered_simulation.states.Q_k = (filtered_simulation.states.Q_uk\n",
+    "                                  + filtered_simulation.states.Q_dk) / 2\n",
     "\n",
     "# Plot results\n",
     "filtered_simulation.Q_in[['A', 'C']].plot(ax=ax[0], title='Input discharge (cms)')\n",
