--- a/test/six_pipe_test.ipynb
+++ b/test/six_pipe_test.ipynb
@@ -16,8 +16,8 @@
     "# Import modules\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from superlink.hydraulics import SuperLink\n",
-    "from superlink.simulation import Simulation"
+    "from pipedream_solver.hydraulics import SuperLink\n",
+    "from pipedream_solver.simulation import Simulation"
    ]
   },
   {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[==================================================] 100.0% [0.81 s]"
+      "[==================================================] 100.0% [1.25 s]"
      ]
     }
    ],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
     "fig, ax = plt.subplots(3, figsize=(10, 12))\n",
     "\n",
     "# Compute average discharge in superlinks\n",
-    "simulation.states.Q_k = (simulation.states._Q_uk + simulation.states._Q_dk) / 2\n",
+    "simulation.states.Q_k = (simulation.states.Q_uk + simulation.states.Q_dk) / 2\n",
     "\n",
     "# Plot results\n",
     "simulation.Q_in[['A', 'C']].plot(ax=ax[0], title='Input discharge (cms)')\n",
