--- a/test/storage_test.ipynb
+++ b/test/storage_test.ipynb
@@ -16,9 +16,9 @@
     "import json\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from superlink.superlink import SuperLink\n",
-    "from superlink.numbalink import NumbaLink\n",
-    "from superlink.simulation import Simulation"
+    "from pipedream_solver.superlink import SuperLink\n",
+    "from pipedream_solver.nsuperlink import nSuperLink\n",
+    "from pipedream_solver.simulation import Simulation"
    ]
   },
   {
@@ -104,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[=================================================-] 98.1%"
+      "[=================================================-] 98.1% [4.37 s]"
      ]
     }
    ],
@@ -160,7 +160,7 @@
     "fig, ax = plt.subplots(3, figsize=(10, 12))\n",
     "\n",
     "# Compute average discharge in superlinks\n",
-    "simulation.states.Q_k = (simulation.states._Q_uk + simulation.states._Q_dk) / 2\n",
+    "simulation.states.Q_k = (simulation.states.Q_uk + simulation.states.Q_dk) / 2\n",
     "\n",
     "# Plot results\n",
     "simulation.Q_in[['A', 'C']].plot(ax=ax[0], title='Input discharge (cms)')\n",
@@ -187,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "superlink = NumbaLink(superlinks, superjunctions, storages=storages)    "
+    "superlink = nSuperLink(superlinks, superjunctions, storages=storages)    "
    ]
   },
   {
@@ -199,7 +199,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[=================================================-] 98.1%"
+      "[=================================================-] 98.1% [0.93 s]"
      ]
     }
    ],
@@ -242,7 +242,7 @@
     "fig, ax = plt.subplots(3, figsize=(10, 12))\n",
     "\n",
     "# Compute average discharge in superlinks\n",
-    "simulation.states.Q_k = (simulation.states._Q_uk + simulation.states._Q_dk) / 2\n",
+    "simulation.states.Q_k = (simulation.states.Q_uk + simulation.states.Q_dk) / 2\n",
     "\n",
     "# Plot results\n",
     "simulation.Q_in[['A', 'C']].plot(ax=ax[0], title='Input discharge (cms)')\n",
